# crafting_interpretersv2

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: unit-test.yaml
hack_vm/: README.md  output.asm  push_pop.vm  pyproject.toml
hack_vm/hack_vm/: __init__.py  __main__.py  operations.py
hack_vm/vm_code/: eq_test.vm  gt_neg.vm  lt.vm  push.vm  simple_add.vm
py_jack/: pyproject.toml  strings.jack  testing.jack
py_jack/py_jack/: __main__.py  ast.py  ast_nodes.py  jack_parser.py  jack_scanner.py  parser.py  scanner.py  testing.py
py_jack/tests/: test_basics.py  test_statements.py  test_structure.py
py_jack/tests/code_gen/: test_control_flow.py  test_var_decs.py  test_vm_output_expressions.py
py_jack/tests/parser/: test_whole_programs.py
py_jilox/: README.md  pyproject.toml  something.lox
py_jilox/py_jilox/: Expr.py  __main__.py  error_handling.py  gen_exprs.py  lox_parser.py  lox_scanner.py  parser.py  pasteries.py  scanner.py  tokens.py
pylox/: pyproject.toml
pylox/lox_scripts/: blocks.lox  class_stuff.lox  closure_issue.lox  empty_class.lox  fib.lox  fib_return.lox  functions.lox  time_fib.lox  while_loop.lox
pylox/pylox/: Expr.py  Stmnt.py  __main__.py  code_gen.py  error_handling.py  gen_exprs.py  lox_parser.py  lox_scanner.py
