[tool.poetry]
name = "crafting-interpreters"
version = "0.1.0"
description = "implementation of toy programmaing languages"
authors = ["sasa cocic <cocicsasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py_jilox = { path = "py_jilox", develop = true }
py_jack = { path = "py_jack", develop = true }
# TODO: add Ruff
click = "^8.1.7"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
