[tool.poetry]
name = "hack_vm"
version = "0.1.0"
description = ""
authors = ["Sasa Cocic <sasacocic@example.com>"]
# readme = "README.md"
# license = "BSD"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
