[tool.poetry]
name = "py-jack"
version = "0.1.0"
description = ""
authors = ["sasa cocic <cocicsasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
